# hash-wasm

./: Cargo.toml  LICENSE_MIT  README.md
src/: hashs.rs  lib.rs  md5.rs
tests/: md5.rs  web.rs
