[package]
name = "hash-wasm"
version = "0.1.1"
authors = ["jethro <jethro_nb@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
md-5 = "0.10.6"
sha2 = "0.10.8"
sha1 = "0.10.6"

[dependencies.web-sys]
version = "0.3.68"
features = [ "console" ]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true

[profile.test]
opt-level = 3
